--- a/WindowExplorer/Sources/Controllers/RecordViewController/Views/RelatedItemViews/RelatedItemListView.xib
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Views/RelatedItemViews/RelatedItemListView.xib
@@ -31,7 +31,7 @@
                         </customView>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFi-RG-9Vw">
                             <rect key="frame" x="78" y="52" width="214" height="18"/>
-                            <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" title="Title" usesSingleLineMode="YES" id="DZc-6H-bXz">
+                            <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" usesSingleLineMode="YES" id="DZc-6H-bXz">
                                 <font key="font" size="11" name="Soleil-Bold"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
